Bug 1762792 - SVG <use> elements should render despite zero values in their width and height attributes (unless they're referencing a <svg> or <symbol> element) r=emilio

Differential Revision: https://phabricator.services.mozilla.com/D150258